# GammaRayAndroid

./: .gitignore  .gitmodules  Readme.md  build.gradle  build_official_release.bat  settings.gradle
app/: build.gradle  tc_key.jks
app/src/androidTest/java/com/tc/client/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: anim_empty.lottie  anim_loading.lottie  anim_not_working.lottie  anim_searching.lottie  anim_triangles.lottie  anim_upload.lottie  anim_working.lottie  base_fragment.glsl  base_tex_fragment.glsl  base_vertex.glsl  video_fragment.glsl  video_vertex.glsl
app/src/main/assets/shaders/: circle_image_fs.glsl  circle_image_vs.glsl
app/src/main/cpp/: CMakeLists.txt  app_context.cpp  app_context.h  application.cpp  application.h  audio_player.cpp  audio_player.h  env_settings.cmake  env_wrapper.h  frame_render.cpp  frame_render.h  main.cpp  native-lib.cpp  native_msg_maker.cpp  native_msg_maker.h
app/src/main/java/com/tc/client/: App.java  AppContext.kt  AssetsUtil.java  BufferUtil.java  Closer.java  ControlLayer.java  ControlLayerParam.java  ControlLayerParamLoader.java  Director.java  DpadButtonGroup.java  FrameRender.java  FrameRenderActivity.java  FrameRenderView.java  GLUtil.java  Image.java  ImageLoader.java  MainActivity.java  MainActivity.kt  MainActivity2.java  NetworkChecker.kt  Renderer.java  Result.kt  ScanInfo.kt  ServerApi.kt  Settings.kt  Shader.java  Sprite.java  Statistics.kt  TestMediaClient.java  Texture.java  VAO.java
app/src/main/java/com/tc/client/activity/: ManualInputActivity.kt  QRCodeScanActivity.java
app/src/main/java/com/tc/client/db/: DBManager.kt  DBServer.java  DBServerDao.java  DaoMaster.java  DaoSession.java
app/src/main/java/com/tc/client/devices/: ControllerKeys.kt  UsbDeviceManager.kt  XBoxController.kt
app/src/main/java/com/tc/client/effects/: BarLine.kt  BarLine2.kt  BarTime.kt  CircleImages.kt  EffectActivity.kt  EffectDefinition.kt  EffectFragment.kt  EffectView.kt  HexagonBlock.kt  RandomCircle.kt  RectangleBlock.kt  SpreadTriangle.kt
app/src/main/java/com/tc/client/effects/base/: InterceptableViewGroup.java
app/src/main/java/com/tc/client/effects/box2d/: Box2DFragment.java  Box2dActivity.java  Box2dEffectView.java  Box2dSenserLogic.java
app/src/main/java/com/tc/client/effects/fireworks/: FireWorksActivity.java  GiftParticleContants.java  GiftParticleEffectView.java  GiftParticleFragment.java
app/src/main/java/com/tc/client/effects/particle/: SpreadParticle.kt
app/src/main/java/com/tc/client/effects/spine/: LibgdxSpineEffectView.java  LibgdxSpineFragment.java  SpineActivity.java
app/src/main/java/com/tc/client/effects/util/: Utils.java
app/src/main/java/com/tc/client/events/: OnAddScanInfo.java  OnRunningGames.java  OnServerAvailable.java  OnServerDeleted.java  OnServerEmpty.java  OnServerOffline.java  OnServerScanned.java
app/src/main/java/com/tc/client/impl/: CursorInfo.kt  ThunderApp.java  ThunderSdk.java
app/src/main/java/com/tc/client/render/: Director.java  Dpad.java  FrameRender.java  FrameRenderActivity.java  FrameRenderView.java  GamepadButtons.kt  Image.java  Renderer.java  Shader.java  Sprite.java  Texture.java  VAO.java  XInputGamepad.java
app/src/main/java/com/tc/client/steam/: JavaWSClient.java  Machine.kt  RunningGame.kt  SteamApp.kt  SteamAppManager.kt  SteamGame.kt  UdpBroadcastReceiver.java
app/src/main/java/com/tc/client/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/java/com/tc/client/ui/: BaseFragment.kt  MainTopRightMenu.kt
app/src/main/java/com/tc/client/ui/base/: CustomAlertDialog.kt  ErrorDialog.kt  OnListItemListener.kt
app/src/main/java/com/tc/client/ui/book/: BookAdapter.kt  BookContentActivity.kt  BookFragment.kt  BookInfo.kt  HomeViewModel.kt  ItemDecoration.kt  SteamAppAdapter.kt  SteamAppFragment.kt
app/src/main/java/com/tc/client/ui/day/: DayFragment.kt  DaySentenceManager.kt  NotificationsViewModel.kt
app/src/main/java/com/tc/client/ui/effects/: DaySentence.kt  DaySentenceManager.kt  EffectActivity.kt  EffectAdapter.kt  EffectDisplayAdapter.kt  EffectDisplayFragment.kt  EffectDisplayItem.kt  EffectDisplayItemDecoration.kt  EffectDisplayItemDecorationHorizontal.kt  EffectFragment.kt  EffectItem.kt  EffectItemDecoration.kt  MusicEffectsFragment.kt  NotificationsViewModel.kt
app/src/main/java/com/tc/client/ui/machine/: DashboardViewModel.kt  MachineAdapter.kt  MachineFragment.kt  MachineItemDecoration.kt  MachineItemDecorationHorizontal.kt  MachineOpDialog.kt
app/src/main/java/com/tc/client/ui/me/: AboutMeFragment.kt  SettingsFragment.kt
app/src/main/java/com/tc/client/ui/processes/: AllRunningProcessActivity.kt  RunningProcess.kt  (+1 more)
app/src/main/java/com/tc/client/util/: AssetsUtil.java  BufferUtil.java  Closer.java  DateUtil.kt  GLUtil.java  HttpUtil.kt  Result.kt  ScreenUtil.kt  SpUtils.java  ViewUtil.java
app/src/main/java/com/tc/client/widgets/: DPadButton.java  FunctionButton.java  PadButton.java  RockerView.java  test.kt
app/src/main/res/drawable/: bg_item_gradient.xml  ic_down.xml  ic_left.xml  ic_pressed.xml  ic_right.xml  ic_up.xml
app/src/main/res/layout/: abxy_button_group.xml  activity_book_content.xml  activity_effect.xml  activity_frame_render.xml  activity_main.xml  activity_manual_input.xml  activity_qrcode_scan.xml  activity_running_process.xml  box2d_activity.xml  dialog_error.xml  dialog_op_game.xml  dialog_op_machine.xml  dpad_button_group.xml  effect_layout.xml  fragment_aboutme.xml  fragment_book.xml  fragment_day.xml  fragment_effect.xml  fragment_machine.xml  fragment_settings.xml  fragment_steam_app.xml  fragment_video.xml  gift_activity.xml  item_book.xml  item_effect.xml  item_machine.xml  item_running_process.xml  item_steam_app.xml  item_top_right.xml  layout_title_bar.xml  lf_layout_giftparticle.xml  spine_activity.xml
app/src/main/res/values/: attrs.xml  colors.xml  dimens.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/tc/client/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
(+20 files in other folders)
